Update copyright notice

--- a/Epigraver/configurationui/about.html
+++ b/Epigraver/configurationui/about.html
@@ -52,7 +52,7 @@
         for more information about this screensaver and to post issues or feature requests.</p>
 
     <div id="license">
-        <p>Copyright &copy; 2020 Robert F. Beeger</p>
+        <p>Copyright &copy; 2020-2021 Robert F. Beeger</p>
 
         <p>Permission is hereby granted, free of charge, to any person obtaining a copy
             of this software and associated documentation files (the "Software"), to deal
